noteds